@@ -6,7 +6,7 @@
  * 
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation; either version 2 of the License, or (at
+ * the Free Software Foundation; either version 3 of the License, or (at
  * your option) any later version.
  * 
  * This program is distributed in the hope that it will be useful, but
@@ -16,7 +16,8 @@
  * 
  * You should have received a copy of the GNU General Public License
  * along with this program; if not, write to the Free Software
- * Foundation, Inc.,  59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+ * Foundation, Inc.,  51 Franklin Street, Fifth Floor, Boston, MA
+ * 02110-1301, USA
  */
  
 // we need the functions:
@@ -2652,6 +2653,11 @@ gint key_press_event(GtkWidget *widget, GdkEventKey *event)
       handled = TRUE; 
       break; // stops Space key getting through to key-press-hook
       
+   case GDK_c:
+   case GDK_C:
+      handled = TRUE; 
+      break; // stops C key getting through to key-press-hook
+      
    case GDK_i:
    case GDK_I:
       // throw away i key pressed (we act on i key released).
@@ -3094,7 +3100,7 @@ gint key_release_event(GtkWidget *widget, GdkEventKey *event)
       break;
       
    case GDK_c:
-   case GDK_D:
+   case GDK_C:
       g.draw_crosshairs_flag = 1 - g.draw_crosshairs_flag; 
       g.crosshairs_text();
       g.graphics_draw();
